REG-8899 Migrert deprecated Java ...