@@ -65,7 +65,7 @@ public class HentGyldigeAdresserServiceTest {
         Mockito.verify(tpsRequestSender).sendTpsRequest(captor.capture(), any(), anyLong());
         TpsFinnGyldigeAdresserRequest actualRequest = captor.getValue();
         
-        assertEquals(new Integer(ANTALL), actualRequest.getMaxRetur());
+        assertEquals(Integer.valueOf(ANTALL), actualRequest.getMaxRetur());
         assertEquals(KOMMUNE_NR, actualRequest.getKommuneNrsok());
         assertEquals(POST_NR, actualRequest.getPostNrsok());
         assertEquals(Typesok.T, actualRequest.getTypesok());
@@ -84,7 +84,7 @@ public class HentGyldigeAdresserServiceTest {
         verify(tpsRequestSender).sendTpsRequest(captor.capture(), any(), anyLong());
         TpsFinnGyldigeAdresserRequest actualRequest = captor.getValue();
         
-        assertEquals(new Integer(ANTALL), actualRequest.getMaxRetur());
+        assertEquals(Integer.valueOf(ANTALL), actualRequest.getMaxRetur());
         assertEquals(Typesok.F, actualRequest.getTypesok());
         assertEquals(null, actualRequest.getAdresseNavnsok());
         assertEquals("A", actualRequest.getAksjonsKode());
